[package]
name = "rainy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.33.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.22"
serde_json = "1.0.107"
serde = "1.0.190"